<resources>
    <string name="app_name">Saloon</string>
    <string name="welcome_back_sign_in_to_continue"><b>Welcome Back!</b> Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="no_account">No Account?</string>
    <string name="admob_app_id">ca-app-pub-7939620883471714~6817033753</string>
    <string name="interstitial">ca-app-pub-7939620883471714/6433890370</string>
    <string name="banner">ca-app-pub-7939620883471714/1564707075</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="username_referral">Username / Referral code</string>
    <string name="phone_no">Phone no.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_image">User Profile Image</string>
    <string name="select_attachment_s">Select Attachment(s)</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="find_your_email">Find your email</string>
    <string name="enter_your_recovery_email">Enter your recovery email</string>
    <string name="enter_verification_code">Enter Verification code</string>
    <string name="sent_to_your_email_example_gmail_com">Sent to your email example@gmail.com</string>
    <string name="enter_8_character_code">Enter 8 character code</string>
    <string name="send">SEND</string>
    <string name="verify">Verify</string>
    <string name="didn_t_get">Didn\'t get?</string>
    <string name="send_again">Send Again?</string>
    <string name="confirm">Confirm</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="new_password">New Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="notice">Notice</string>
    <string name="subscription">Subscription</string>
    <string name="withdraw">Withdraw</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi,</string>
    <string name="robert_smith">Unavailable</string>
    <string name="you_have_3_tasks_remaining">You have 0 tasks today</string>
    <string name="total_earning">Total Earnings</string>
    <string name="_0_66">$0.00</string>
    <string name="default_profile">https://i.stack.imgur.com/l60Hf.png</string>
    <string name="remaining_tasks">Remaining:</string>
    <string name="_3">0</string>
    <string name="_1">1</string>
    <string name="vip_level">VIP level:</string>
    <string name="task_1">Task 1</string>
    <string name="what_is_the_capital_of_pakistan">What is the capital of Pakistan</string>
    <string name="islamabad">Islamabad</string>
    <string name="submit">Submit</string>
    <string name="new_announcement">New Announcement!</string>
    <string name="every_one_who_">Every One who is using our app from August, 2020 will get 20% off in app purchases in next update.</string>
    <string name="four_membership_packag">Four membership packages with 1-year validation. \nUser has to apply for renewal.</string>
    <string name="premium_4">Premium 4</string>
    <string name="upto_7_earnings">Up to $7 earnings per day\nContains 100 Tasks per day\n$0.07 per task</string>
    <string name="_500">$500</string>
    <string name="select_this_package">Select this package</string>
    <string name="binance_email">Binance email </string>
    <string name="amount">Amount</string>
    <string name="withdrawal_address_trc20_only">Withdrawal Address (TRC20 Only)</string>
    <string name="withdrawal_charge_1">Withdrawal charge : $1</string>
    <string name="withdraw_status">Withdraw Status</string>
    <string name="withdrawal_payments_history">Withdrawal payments history</string>
    <string name="your_btc_address">USDT address (TRC20)</string>
    <string name="_10">5</string>
    <string name="usd">$</string>
    <string name="usdt">USDT</string>
    <string name="sign_out">Sign out</string>
    <string name="invite_another_user_to_get_bonus">Invite another user to get bonus</string>
    <string name="payment_invoices">Payment Invoices</string>
    <string name="help">Help</string>
    <string name="package_detail">Package Detail</string>
    <string name="no_subs">No subscriptions available,\n please try again later.
    </string>
    <string name="copy">Copy</string>
    <string name="please_pay_usdt_from_binance_and_enter_transaction_id">Please pay <b>usdt</b> at above address from <b>binance</b> and enter transaction id below</string>
    <string name="enter_transaction_id_here">Enter transaction id here</string>
    <string name="asdjaskdjaskldjaskldjaskldj">asdjaskdjaskldjaskldjaskldj</string>
    <string name="wallet_address">Wallet address</string>
    <string name="instructions_at_the_">Instructions at the Top, tap here to redirect to tutorial</string>
    <string name="pending">Pending…</string>
    <string name="_11">$10</string>
    <string name="fee_charge">Fee/Charge</string>
    <string name="__1">$1</string>
    <string name="_12_9_2021">12-9-2021</string>
    <string name="total_amount">Total Amount</string>
    <string name="__10">$10</string>
    <string name="_10_sept_2021">10-sept-2021</string>
    <string name="binance">Binance</string>
    <string name="completed">Completed</string>
    <string name="_100">$100</string>
    <string name="referral">Referral</string>
    <string name="invite_a_friend_and_get_bonus">Invite a friend and get bonus.</string>
    <string name="refer_5"><![CDATA[• Refer Premium 5 and get $130]]></string>
    <string name="refer_4"><![CDATA[• Refer Premium 4 and get $65]]></string>
    <string name="refer_3"><![CDATA[• Refer Premium 3 and get $30]]></string>
    <string name="refer_2"><![CDATA[• Refer Premium 2 and get $16]]></string>
    <string name="refer_1"><![CDATA[• Refer Premium 1 and get $7]]></string>
    <string name="refer_0"><![CDATA[• Refer Basic King and get $3]]></string>
    <string name="share">Share</string>
    <string name="status">Status :</string>
    <string name="invoice_no">Invoice No :</string>
    <string name="currency">Currency :</string>
    <string name="invoice_id">Invoice Id :</string>
    <string name="_04">04</string>
    <string name="_2312354">#2312354</string>
    <string name="about_us">About Us</string>
    <string name="contact_us_at_email">Contact us at email</string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="default_web_client_id_">370944119419-lcf8s0uj0uhe74cckc2kt9sbekg17lm7.apps.googleusercontent.com</string>
    <string name="facebook_app_id">276205587373505</string>
    <string name="fb_login_protocol_scheme">fb276205587373505</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="update">Update</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_referral">Enter referral code</string>
    <string name="cancel">Cancel</string>
    <string name="i_was_referred_by">Were you referred by another user?</string>
    <string name="i_wasn_t_referred">I wasn\'t referred</string>
    <string name="entered_user_will_be_granted_bonus_upon_your_subscription_purchase"><b>Note:</b> Entered user will be granted bonus upon your subscription purchase…</string>
    <string name="available_balance">Available Balance</string>
    <string name="loading">Loading…</string>
    <string name="err_resp">Please check your network and try again</string>
    <string name="no_tasks">No tasks available right now, Please try again later</string>
    <string name="_0">0</string>
    <string name="i_was_referred">I was referred by…</string>
    <string name="your_payment_is_in_p">Your payment is in pending, within <b>24 hrs</b> your payment will progress</string>
    <string name="your_withdrawal_is_in_p">Your withdrawal is in pending, within <b>6 hrs</b> your withdrawal will progress</string>
    <string name="once_confirmed_you_will_get_payment_invoice">Once confirmed you will get payment invoice</string>
    <string name="ok">OK</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_earned_0_06">You have earned $0.06</string>
    <string name="watch_ad">Load more tasks, <i><u>Click Here</u></i></string>
    <string name="watch_an_ad_to_unlock_more_tasks">Watch an Ad to unlock more tasks</string>
    <string name="unlock">Unlock</string>
    <string name="x">X</string>
    <string name="default_tv">You have completed all your allocated tasks,\n purchase a subscription for further tasks</string>
    <string name="no_withdrawal_found">No withdrawal found</string>
    <string name="no_invoices_available">No invoices available</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="my_referral_code">My referral code</string>
    <string name="already_submitted">Already submitted</string>
    <string name="submitted">Submitted</string>
    <string name="_92">+92</string>
    <string name="subscription_">Subscription:</string>
    <string name="no_sub">Basic</string>
    <string name="developers">About developers</string>
    <string name="loading_more_tasks_for_you">Loading more tasks for you....</string>
    <string name="failed_to_load_ad">Failed to load ad</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">Yes, I have joined</string>
    <string name="desc">Did you join TaskTok Telegram group? It is a must.\nFollow the link to join our official group.\nhttps://t.me/tasktok</string>
    <string name="titl">Notice</string>
    <string name="sl">-</string>
    <string name="style_and_beauty_seats">Style and Beauty Seats</string>
    <string name="enter_code">Enter Code</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="signup_with_phone_number">Signup with Phone Number</string>
    <string name="hair_dressing">Rs. 500</string>
    <string name="enter_a_review">Write a review</string>
    <string name="downtown_beauty_salon">Downtown beauty salon</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="parlour_name">Saloon Name</string>
    <string name="service">Service</string>
    <string name="time_date">Time/Date</string>
    <string name="_12_december_2021_3_00_pm">12 December 2021, 3:00 PM</string>
    <string name="service_charges">Service Charges</string>
    <string name="pkr_3000">PKR - 3000 /-</string>
    <string name="enter_easypaisa_transaction_id_here">Enter Easypaisa transaction Id</string>
    <string name="send_payments_to_using_easypaisa_to_nacc_number_03345585858_ntitle_umar_khan">Send payments using Easypaisa to,\n<b>Acc Number:</b> 03345585858\n<b>Title:</b> Umar Khan</string>
    <string name="review_list_activity">Review List</string>
    <string name="this_is_my_review_to_the_salon">This is my review to the salon</string>
    <string name="salon_title_downtown_parlour">Salon Title: Downtown parlour</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="note_in_case_of_exceptional_timings">Note in case of exceptional timings</string>
    <string name="note">Note <i>(In case of exceptional timings)</i></string>
    <string name="working_days_of_the_week">Working Days of the week</string>
    <string name="days">Days</string>
    <string name="saloon_calender">Saloon Calender</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="select_saloon_available_timings">Select saloon\'s available time slots</string>
</resources>