<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    app:cardBackgroundColor="@color/darker_gray"
    app:cardCornerRadius="10dp"
    android:layout_marginVertical="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_saloon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/salon_title_downtown_parlour"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/rating"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/rb_rating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:progressBackgroundTint="@color/light_gray"
            android:progressTint="@color/yellow"
            android:rating="2.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/review"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rectangle_1594"
            android:focusableInTouchMode="false"
            android:hint="@string/enter_a_review"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:text="@string/this_is_my_review_to_the_salon"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    </LinearLayout>

</androidx.cardview.widget.CardView>
