<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".activities.AppointmentScreenActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:drawablePadding="20dp"
        android:onClick="back"
        android:text="@string/confirm_appointment"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/parlour_name"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_rectangle_1594"
                android:focusableInTouchMode="false"
                android:paddingHorizontal="10dp"
                android:text="@string/downtown_beauty_salon"
                android:textColor="@color/gray"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/service"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/et_ver_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_rectangle_1594"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="@string/hair_dressing"
                android:textColor="@color/gray"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/time_date"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_rectangle_1594"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="@string/_12_december_2021_3_00_pm"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/service_charges"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_rectangle_1594"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="@string/pkr_3000"
                android:textColor="@color/gray"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/send_payments_to_using_easypaisa_to_nacc_number_03345585858_ntitle_umar_khan"
                android:textAlignment="textStart"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_rectangle_1594"
                android:hint="@string/enter_easypaisa_transaction_id_here"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/hint_color"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_back"
                android:onClick="confirm"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/upper_cut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_group_654"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>